Getting started with some config.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,9 @@
 
 en:
   hello: "Hello world"
+  helpers:
+    links:
+      new: 'New'
+      destroy: 'Destroy'
+      confirm: 'Confirm'
+      show: 'Show'
